<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:id="@+id/root_layout">

    <Button
        android:id="@+id/btn_login"
        android:text="Login Page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_list"
        android:text="List Page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_calculator"
        android:text="Calculator Page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="載入模擬資料（IdlingResource）"
        android:layout_marginTop="16dp" />
    <Button
        android:id="@+id/btn_WebIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="跳轉網頁"
        android:layout_marginTop="16dp"/>

</LinearLayout>
